kubernetes/media/sonarr/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-certificate
